--- a/src/style/index.css
+++ b/src/style/index.css
@@ -91,7 +91,7 @@
     width: 250px;
     height: 250px;
     background-size: cover;
-    background: url('../../public/img/avatar.jpg');
+    /* background: url('../../public/img/avatar.jpg'); */
     border-radius: 3px 0px 0px 3px;
 }
 #card{
