--- a/src/style/index.css
+++ b/src/style/index.css
@@ -42,12 +42,34 @@
 
 .navbar #search{
     position: absolute;
-    width: 502px;
+    width: 25%;
     height: 32px;
     left: 14%;
 
     background: #FFFFFF;
     border-radius: 3px;
+}
+.navbar #user-name{
+    text-align: center;
+    position: absolute;
+    width: 81px;
+    left: 70%;
+    height: 20px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 21px;
+    color: #FFFFFF;
+}
+.navbar #user-name #avatar{
+    display: inline-block;
+    text-align: center;
+    width: 32px;
+    height: 32px;
+    padding: 5px;
+    background-color: #FFFFFF;
+    color: #3C5999;
+    border-radius: 50%;
+    margin-right: 8px;
 }
 
 .navbar .login{
@@ -66,11 +88,16 @@
 #feed{
     position: absolute;
     height: 1050px;
+    width: auto;
     left: 224px;
     right: 224px;
+
+    left: 15%;
+    right: 15%;
     top: 60px;
     background: #FFFFFF;
 }
+
 
 #feed button{
     text-align: center;
@@ -88,12 +115,16 @@
 }
 
 .photo-container{
-    width: 250px;
-    height: 250px;
+    width: 45%;
+    height: 45%;
     background-size: cover;
     /* background: url('../../public/img/avatar.jpg'); */
     border-radius: 3px 0px 0px 3px;
 }
+.photo-container img{
+    width: 100%;
+}
+
 #card{
     padding: 20px;
     width: 100%;
@@ -103,7 +134,7 @@
     border-radius: 3px 0px 0px 3px;
 }
 #profile{
-    width: 216px;
+    width: 50%;
     /* overflow: inherit; */
 }
 #profile p{
@@ -124,6 +155,7 @@
     background-color: #3C5999;
     color: #FFFFFF;
     border-radius: 50%;
+    margin-right: 8px;
 }
 #feed #profile .card-text{
     font-weight: 400;
@@ -166,10 +198,10 @@
 
 #form form{
     position: absolute;
-    left: 40%;
-    right: 40%;
+    left: 35%;
+    right: 35%;
     top: 27.5%;
-    width: 20%;
+    width: 30%;
     height: 40%;
     background: #F9F9F9;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
@@ -179,8 +211,9 @@
 #form .title{
     position: absolute;
     top: 10%; 
-    left: 40%;
-    right: 40%;
+    left: 35%;
+    right: 35%;
+    width: 30%;
     color: #3C5999;
     font-weight: 700;
 }
@@ -188,8 +221,9 @@
 #form .icon-list{
     position: absolute;
     top: 18%;
-    left: 40%;
-    right: 40%;
+    left: 35%;
+    right: 35%;
+    width: 30%;
     font-size: 50px;
     border: 2px solid #E0E0E0;
     border-radius: 12px;
@@ -198,12 +232,15 @@
     text-decoration: none;
 }
 #form .icon-list .fa-google{
+    font-size: 70%;
     color: darkblue;
 }
 #form .icon-list .fa-facebook{
+    font-size: 70%;
     color: #3C5999;
 }
 #form .icon-list .fa-twitter{
+    font-size: 70%;
     color: #1DA1F2;
 }
 #form form img{
