--- a/src/style/index.css
+++ b/src/style/index.css
@@ -219,6 +219,8 @@
 }
 
 #form .icon-list{
+    display: flex;
+    justify-content: center;
     position: absolute;
     top: 18%;
     left: 35%;
@@ -229,6 +231,7 @@
     border-radius: 12px;
 }
 #form .icon-list a{
+    /* display: inline-block; */
     text-decoration: none;
 }
 #form .icon-list .fa-google{
