--- a/src/style/index.css
+++ b/src/style/index.css
@@ -142,6 +142,9 @@
     word-wrap: break-word;
     
 }
+#profile h6{
+    font-weight: 700;
+}
 #feed #name{
     color: #3C5999;  
     font-size: 1.5rem; 
